--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.7.9
+@version 3.8.0
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -2427,7 +2427,8 @@
 	}
 
 	/*SponsorBlock*/
-	#sponsorblockPopup, #sponsorBlockPopupBody, #sponsorBlockPopupContainer
+	#sponsorblockPopup, #sponsorBlockPopupBody, #sponsorBlockPopupContainer,
+	#sponsorBlockPopupContainer .sbControlsMenu-item
 	{
 		background-color: var(--second-background) !important;
 	}
@@ -2454,11 +2455,11 @@
 		background-color: var(--paper-toggle-button-unchecked-bar-color, #000000) !important;
 		opacity: 0.4 !important;
 	}
-	#sponsorBlockPopupContainer .sponsorBlockPageBody .mediumButton
+	#sponsorBlockPopupContainer .sponsorBlockPageBody .sbMediumButton
 	{
-		background: var(--main-color) !important;
+		background-color: var(--main-color) !important;
 	}
-	#sponsorBlockPopupContainer .sponsorBlockPageBody .mediumButton:hover
+	#sponsorBlockPopupContainer .sponsorBlockPageBody .sbMediumButton:hover
 	{
 		filter: brightness(110%);
 	}
