--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.9.4
+@version 3.9.5
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -1938,6 +1938,10 @@
 	ytd-playlist-video-renderer:hover:not(.dragging)
 	{
 		background-color: var(--second-background) !important;
+	}
+	ytd-playlist-panel-video-renderer[selected][use-color-palette], ytd-playlist-panel-video-renderer[selected][use-color-palette]:hover:not(.dragging)
+	{
+		background-color: var(--hover-background) !important;
 	}
 
 	.header.ytd-playlist-panel-renderer,.playlist-items.ytd-playlist-panel-renderer,
