--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.9.5
+@version 3.9.6
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -365,23 +365,23 @@
 		--paper-spinner-color: var(--dimmer-text) !important;
 
 		--paper-input-container-color: var(--dimmer-text) !important;
-		
+
 		--paper-radio-button-unchecked-color: var(--dimmer-text) !important;
 		--paper-radio-button-unchecked-background-color: transparent !important;
 		--paper-radio-button-checked-color: var(--main-color) !important;
-		--paper-radio-button-checked-ink-color:   var(--main-color) !important;
+		--paper-radio-button-checked-ink-color: var(--main-color) !important;
 		--paper-radio-button-unchecked-ink-color: var(--main-color) !important;
-		
+
 		--paper-checkbox-unchecked-color: var(--dimmer-text) !important;
 		--paper-checkbox-checked-color: var(--main-color) !important;
 		--paper-checkbox-checkmark-color: none !important;
-		--paper-checkbox-checked-ink-color:   var(--main-color) !important;
+		--paper-checkbox-checked-ink-color: var(--main-color) !important;
 		--paper-checkbox-unchecked-ink-color: var(--main-color) !important;
 		--yt-spec-call-to-action: var(--main-color) !important;
 		--yt-spec-suggested-action: var(--hover-background) !important;
 		--yt-spec-outline: var(--hover-background) !important;
 		--yt-spec-brand-button-background: var(--main-color) !important; /*in incognito this may be used as subscribe button but is inconsistent .yt-spec-button-shape-next--brand.yt-spec-button-shape-next--filled*/
-		
+
 		--yt-formatted-string-bold-color: var(--dimmer-text) !important; /*this affects number of views*/
 	}
 	/*Scrollbar fix for chrome*/
@@ -394,15 +394,17 @@
 		width: scrollbar_width !important;
 	}
 	/*Scrollbar fix for firefox*/
-	::-webkit-scrollbar-track {
+	::-webkit-scrollbar-track
+	{
 		background: scrollbar_track !important;
 	}
-	::-webkit-scrollbar-thumb {
+	::-webkit-scrollbar-thumb
+	{
 		background: var(--main-color) !important;
 	}
 
 	/*Background for the entire page*/
-	html, ytd-browse, ytd-watch, ytd-search, ytd-app, ytd-app[is-watch-page], [class*="ytd-watch-flexy"],
+	html, ytd-browse, ytd-watch, ytd-search, ytd-app, ytd-app[is-watch-page], [class*="ytd-watch-flexy"]:not(#engagement-panel-scrim),
 	.style-scope.ytd-page-manager.hide-skeleton,
 	.account-container
 	{
@@ -444,7 +446,7 @@
 	}
 
 	/*Placeholder image on pages that need an account - such as Subscriptions*/
-	ytd-background-promo-renderer .image.ytd-background-promo-renderer, 
+	ytd-background-promo-renderer .image.ytd-background-promo-renderer,
 	ytd-message-renderer yt-icon.ytd-message-renderer
 	{
 		color: var(--main-text) !important;
@@ -986,6 +988,19 @@
 	{
 		color: var(--dimmer-text) !important;
 	}
+	yt-button-renderer.yt-clip-creation-renderer .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled,
+	ytd-button-renderer.ytd-clip-section-footer-renderer .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled
+	{
+		background-color: var(--main-color) !important;
+	}
+
+	/*Join this channel panel > Join button,
+	  Settings > Advanced settings > Copy button*/
+	yt-button-renderer.ytd-sponsorships-tier-renderer .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled,
+	yt-button-renderer.yt-copy-link-renderer .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled
+	{
+		background-color: var(--main-color) !important;
+	}
 
 	/*Playlist creation*/
 	#subtext.yt-live-chat-message-renderer,
@@ -1375,6 +1390,30 @@
 		background-color: var(--second-background) !important;
 		border-color: var(--second-background) !important;
 	}
+	/*comment button*/
+	ytd-button-renderer#submit-button.ytd-commentbox .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled
+	{
+		background-color: var(--main-color) !important;
+		color: var(--main-text) !important;
+	}
+	/*download panel > get trial button*/
+	/*share panel > copy button*/
+	ytd-offline-promo-renderer.ytd-popup-container yt-button-renderer#action-button .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled,
+	yt-third-party-network-section-renderer.ytd-unified-share-panel-renderer yt-button-renderer#copy-button .yt-spec-button-shape-next--call-to-action.yt-spec-button-shape-next--filled
+	{
+		background-color: var(--main-color) !important;
+		color: var(--main-text) !important;
+	}
+	/*Toast notification*/
+	yt-notification-action-renderer yt-button-renderer.yt-notification-action-renderer .yt-spec-button-shape-next--call-to-action-inverse.yt-spec-button-shape-next--text
+	{
+		color: var(--main-color) !important;
+	}
+	/*Toast notification hover*/
+	yt-notification-action-renderer yt-button-renderer.yt-notification-action-renderer .yt-spec-button-shape-next--call-to-action-inverse.yt-spec-button-shape-next--text:hover
+	{
+		background-color: var(--main-background) !important;
+	}
 	if join-color /*overwriting the above*/
 	{
 		.yt-spec-button-shape-next--mono.yt-spec-button-shape-next--tonal[aria-label="Join this channel"]
@@ -1554,7 +1593,18 @@
 
 	.yt-simple-endpoint.style-scope.yt-formatted-string
 	{
-		color: var(--dimmer-text);
+		color: var(--dimmer-text) !important;
+	}
+	/*video hashtags & links in settings page*/
+	#super-title .yt-simple-endpoint.style-scope.yt-formatted-string,
+	ytd-section-list-renderer[page-subtype="WEB_PAGE_TYPE_SETTINGS"] .yt-simple-endpoint.style-scope.yt-formatted-string
+	{
+		color: var(--main-color) !important;
+	}
+	/*panel links*/
+	tp-yt-paper-dialog.ytd-popup-container .yt-simple-endpoint.style-scope.yt-formatted-string
+	{
+		color: var(--main-color) !important;
 	}
 
 	/*Dropdown*/
@@ -2079,8 +2129,8 @@
 	{
 		border-color: var(--main-color) !important;
 	}
-	ytd-horizontal-card-list-renderer.ytd-structured-description-content-renderer:not(:first-child), 
-	ytd-metadata-row-container-renderer.ytd-structured-description-content-renderer:not(:first-child), 
+	ytd-horizontal-card-list-renderer.ytd-structured-description-content-renderer:not(:first-child),
+	ytd-metadata-row-container-renderer.ytd-structured-description-content-renderer:not(:first-child),
 	ytd-structured-description-content-renderer[inline-structured-description] ytd-horizontal-card-list-renderer.ytd-structured-description-content-renderer
 	{
 		border-color: var(--hover-background) !important;
@@ -2948,7 +2998,7 @@
 		color: var(--main-text) !important;
 	}
 	/*load spinner - also for comments*/
-	.spinner-layer.layer-1.tp-yt-paper-spinner, .spinner-layer.layer-2.tp-yt-paper-spinner, 
+	.spinner-layer.layer-1.tp-yt-paper-spinner, .spinner-layer.layer-2.tp-yt-paper-spinner,
 	.spinner-layer.layer-3.tp-yt-paper-spinner, .spinner-layer.layer-4.tp-yt-paper-spinner
 	{
 		color: var(--dimmer-text) !important;
